--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,95 @@
-.loginBox{
-  border:2px solid #443344;
-  border-radius: 10px;
-  margin-top: 200px;
-  margin-left: 100px;
-  text-align:left;
-  width:500px;
-  padding:10px;
+
+.appLogo{
+  text-align: center;
+  width:100%;
 }
+
+.logo{
+  width: 35px;
+  height: 40px;
+}
+.appHeading{
+  font-size: 30px;
+  font-weight: 300;
+}
+
+label{
+ font-size:14px;
+  font-weight: 100;
+}
+input {
+  width: 100%;
+  height: 40px;
+  color: #674354;;
+  background: #f5f7f7;
+  font-size: 20px;
+  border-radius:5px;
+  margin-bottom: 20px;
+  padding: 10px;
+}
+
+.loginText{
+
+  font-weight: normal;
+  font-size: 18px;
+  margin:0;
+}
+.loginHeading span {
+  font-weight: 100;
+  font-size:10px;
+}
+.loginBox {
+  border:3px solid #f4f4f4;
+  box-shadow: #f4f4f4;
+  border-radius: 10px;
+  margin-top: 30px;
+  margin-left: 450px;
+  text-align:left;
+  width: 500px;
+  height: 600px;
+  padding:10px;
+  padding-top: 80px;
+  pading-bottom: 75px;
+  font-family: 'Roboto', sans-serif;
+
+}
+
+button{
+  width: 200px;
+  height: 50px;
+  border-radius: 10px;
+  background: #674354;
+  font-size: 15px;
+  color: #f4f4f4;
+  font-weight: 200;
+  opacity: .8;
+  cursor: pointer;
+}
+.inputAreaBox{
+  margin: 20px;
+  padding-right: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+.loginHeading {
+  margin-top: 50px;
+  margin-left: 20px;
+  margin-right: 20px;
+  font-family: 'Roboto', sans-serif;
+}
+.loginButtonBox{
+  margin:20px;
+  text-align: right;
+  position:relative;
+  font-weight:300;
+}
+.loginButtonBox a{
+  position:absolute;
+  left:0;
+  top: 50%;
+  font-size: 18px;
+  margin-right: 100px;
+  text-decoration: none;
+  color: #674354;
+}
+
+
