--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,8 +1,24 @@
 <div class="loginBox">
-  <label for="name">Username</label>
+
+  <div class="appLogo">
+    <img class="logo" src="../assets/pic2wordslogo.png">
+    <span class="appHeading">Welcome to Pic2Word</span>
+  </div>
+  <div class="loginHeading">
+    <h6 class="loginText">Login Here</h6>
+    <span>Already have an account</span><br>
+  </div>
+
+  <div class="inputAreaBox">
+  <label for="name">Username</label><br>
   <input [(ngModel)]="username" type="text">
-  <hr>
-  <label for="password">Password</label>
+
+  <label for="password">Password</label><br>
   <input [(ngModel)]="password" type="password">
-  <button (click)="login()">Login</button>
+  </div>
+  <div class="loginButtonBox">
+    <a href="/register">Register</a><button (click)="login()">Login</button>
+  </div>
+
+
 </div>
